[gd_scene load_steps=4 format=3 uid="uid://cvjqphxv13pob"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_25x6o"]
[ext_resource type="Theme" uid="uid://stg8hps8oh07" path="res://MainMenu/MenuTheme.tres" id="1_bosqu"]

[sub_resource type="LabelSettings" id="LabelSettings_4qhut"]
font_size = 72

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25x6o")

[node name="MenuContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BunnyWars"
label_settings = SubResource("LabelSettings_4qhut")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MenuContainer"]
layout_mode = 2

[node name="JoinGame" type="TextureButton" parent="MenuContainer/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Test"
theme = ExtResource("1_bosqu")
stretch_mode = 3

[node name="Label" type="Label" parent="MenuContainer/GridContainer/JoinGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Join Game
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomizeBunnies" type="TextureButton" parent="MenuContainer/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Test"
theme = ExtResource("1_bosqu")
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/GridContainer/CustomizeBunnies"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Your Team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureButton" parent="MenuContainer/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Test"
theme = ExtResource("1_bosqu")
stretch_mode = 3

[node name="Label" type="Label" parent="MenuContainer/GridContainer/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
